TODO: 
 * Process times and similar ?
 * Fix configuration GUI (low priority)
 * Add API for rehashing the daemon (or implement it the API is there but does nothing)
 * Fixa dependonservice LanManWorkStation (old win)
 * Fix RtlStringFromGUID problem on NT4

2012-01-18 MickeM
 * Improved unit tests so they can be run all in sequence
 * Fixed various bugs in the unit tests
 * Improved the syntax and output of running unit tests
 * Refactored unit tests to be slightly nicer
 * Fixed error state propagation
 * Added unit tests to cmake (ie make test will now run unit tests)
  
2012-01-16 MickeM
 * Added option to both execute and query item (with a reload in the middle for installing/running unittests)
 * Fixed issue in python unittest framework to handle "unload" (ie. reload)
 * Fixed NRPE certificate path lookup issue
 * Fixed some minor issues here and there
 * Fixed issue in loader to allow loading dummy as dummy (and not only dummy://)

2012-01-15 MickeM
 * Fixed installer "back" issues
 * Fixed payload truncation for NRPe and NSCA
 * Improved the installer target tagging functions in the python installer

2012-01-13 MickeM
 * Fixed some issues with the trac configuration generator

2012-01-12 MickeM
 * Fixed issue with --submit command line option erroneusly reported missing optien (when it is not supported)
 * Added settings store "dummy" for people who dont want to store settings (long term use is for unit tests)
 * Added new option to NSCClient --source-host for settings the host name of the caller (your machine).
 * Change so enryption algorithms are case insensitevie (ie. 3DES and 3des both work)

2012-01-09 MickeM
 * Fixed hostname issue in NSCAClient (hostname = auto now auto detects hostname
 * Fixed some minor issues in NSCA and CLI api
 * Added CLI based (exec) APIs to NSCA unit tests (now 697 test for NSCA)

2012-01-08 MickeM
 * Fixed some issues in the NRPE decoder